EPBDS-14660 Use AutoClosable in HttpClient